testsuite/poke.pkl/mod-offsets-diag-2.pk
/* { dg-do compile } */

var a = 23#B
        % lambda void: {}; /* { dg-error "invalid operand.*\n.*expected offset" } */
